force-app/main/default/objects/blng__BillingConfig__c/blng__BillingConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config settings for all Billing modules</description>
    <label>Billing Config</label>
</CustomObject>