force-app/main/default/objects/blng__BillingConfig__c/fields/blng__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>blng__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>