force-app/main/default/objects/blng__BillingConfig__c/fields/blng__Category__c.field-meta.xml
<CustomField>
    <fullName>blng__Category__c</fullName>
    <label>Category</label>
    <length>55</length>
    <type>Text</type>
</CustomField>