force-app/main/default/objects/blng__BillingConfig__c/fields/blng__DateValue__c.field-meta.xml
<CustomField>
    <fullName>blng__DateValue__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>