force-app/main/default/objects/blng__BillingConfig__c/fields/blng__FieldType__c.field-meta.xml
<CustomField>
    <fullName>blng__FieldType__c</fullName>
    <label>Field Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>