force-app/main/default/objects/blng__BillingConfig__c/fields/blng__HelpText__c.field-meta.xml
<CustomField>
    <fullName>blng__HelpText__c</fullName>
    <label>Help Text</label>
    <length>250</length>
    <type>Text</type>
</CustomField>