force-app/main/default/objects/blng__BillingConfig__c/fields/blng__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>blng__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>