force-app/main/default/objects/blng__BillingConfig__c/fields/blng__PercentageValue__c.field-meta.xml
<CustomField>
    <fullName>blng__PercentageValue__c</fullName>
    <label>Percentage Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>