force-app/main/default/objects/blng__BillingConfig__c/fields/blng__PicklistIndicator__c.field-meta.xml
<CustomField>
    <fullName>blng__PicklistIndicator__c</fullName>
    <label>Picklist Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>