force-app/main/default/objects/blng__BillingConfig__c/fields/blng__Sequence__c.field-meta.xml
<CustomField>
    <fullName>blng__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>